fix icon sizes and alignment

--- a/frontend/src/App.less
+++ b/frontend/src/App.less
@@ -25,7 +25,7 @@
 @header-height: 150px;
 .app__header {
     position: fixed;
-    z-index: 2;
+    z-index: 4;
     width: 100%;
     height: @header-height;
     background-color: #ffffff;
